<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Poker Game</string>
    <string name="welcome_message">Welcome to Poker Game!</string>
    <string name="start_game">Start Game</string>
    <string name="game_mode">Game Mode</string>
    <string name="traditional_poker">Traditional 5-Card Poker</string>
    <string name="three_card_poker">3-Card Poker</string>
    <string name="seven_card_stud">7-Card Stud</string>
    <string name="adventure_mode">Adventure Mode</string>
    <string name="safari_mode">Safari Mode</string>
    <string name="ironman_mode">Ironman Mode</string>
</resources>